--- a/src/partials/_typography.scss
+++ b/src/partials/_typography.scss
@@ -120,9 +120,9 @@ body {
 }
 
 .homeButtonContainer {
-    position: absolute;
-    right: -5px;
-    top: -20px;
+    position: fixed;
+    right: 5px;
+    top: 8px;
 }
 
 .homeButton {
